# codex-desktop-linux

./: AGENTS.md  README.md  flake.nix
.github/workflows/: daily-release-deb.yml
computer-use-linux/: Cargo.toml
launcher/: webview-server.py
linux-features/remote-control-ui/: patch.js
linux-features/remote-mobile-control/: README.md  cold-start-hook.sh  patch.js  test.js
nix/: home-manager-module.nix  nixos-module.nix
scripts/: patch-linux-window-ui.test.js
scripts/lib/: linux-update-bridge-patch.js
scripts/patches/: avatar-overlay.js  launch-actions.js  main-process.js  webview-assets.js
tests/: scripts_smoke.sh
updater/: Cargo.toml
updater/src/: app.rs  builder.rs  config.rs  main.rs  release.rs
