[package]
name = "codex-computer-use-linux"
version = "0.2.3-linux-alpha1"
edition = "2021"

[[bin]]
name = "codex-computer-use-linux"
path = "src/main.rs"

[[bin]]
name = "codex-chrome-extension-host"
path = "src/bin/codex-chrome-extension-host.rs"

[dependencies]
anyhow = "1.0.102"
atspi = { version = "0.29.0", features = ["tokio"] }
base64 = "0.22.1"
cosmic-protocols = { git = "https://github.com/pop-os/cosmic-protocols", rev = "160b086", default-features = false, features = ["client"] }
evdev = "0.13.2"
futures-util = "0.3.32"
image = { version = "0.25", default-features = false, features = ["png"] }
libc = "0.2"
rmcp = { version = "1.5.0", features = ["transport-io"] }
schemars = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.1", features = ["macros", "rt", "time"] }
wayland-client = "0.31.11"
wayland-protocols = { version = "0.32.9", features = ["client", "staging"] }
xkeysym = "0.2.1"
zbus = "5.14.0"
