[package]
name = "codex-update-manager"
version = "0.8.1"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["clock", "serde"] }
clap = { version = "4.6.0", features = ["derive"] }
directories = "6.0.0"
futures-util = "0.3.32"
fs4 = "0.13.1"
notify-rust = "4.14.0"
reqwest = { version = "0.13.2", default-features = false, features = ["http2", "json", "rustls", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
semver = "1.0.27"
sha2 = "0.11.0"
tokio = { version = "1.51.1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "time"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt"] }

[dev-dependencies]
tempfile = "3.27.0"
wiremock = "0.6.5"
